# git-log-tracker

./: .gitignore  CLAUDE.md  ONBOARDING.md  README.md  SKILL.md
.claude/: settings.local.json
.claude-plugin/: plugin.json
references/: ONBOARDING.md
scripts/: config.toml  db.py  hook.py  install.py  query.py  setup_global.py
src/: __init__.py  cli.py  config.py  db.py  hook.py  pyproject.toml
