[project]
name = "git-log-tracker"
version = "0.2.0"
description = "Git post-commit hook + SQLite commit index CLI"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
git-log-tracker = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]