[project]
name = "git-log-tracker"
version = "0.5.0"
description = "Git post-commit hook + SQLite commit index CLI"
requires-python = ">=3.11"
dependencies = ["sqlalchemy>=2.0", "alembic>=1.13"]

[project.scripts]
git-log-tracker = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]